--- a/styles/common.css
+++ b/styles/common.css
@@ -47,6 +47,15 @@ a:hover {
     display: flex;
 }
 
+@media (max-width: 1000px) {
+    .header__nav, .header__nav__left {
+        flex-direction: column;
+    }
+    .header__nav__pages {
+        margin: 2rem auto;
+    }
+}
+
 .header__nav__right {
     display: flex;
     align-items: center;
