--- a/styles/makeup.css
+++ b/styles/makeup.css
@@ -1,3 +1,50 @@
+.page-header-banner {
+    height: 30rem;
+    background-image: url("../images/main-banner.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.page-header-banner h1 {
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    background-color: rgb(255 140 133 / 50%);
+    backdrop-filter: contrast(0.6);
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+}
+
+.items-filters {
+    background-color: var(--color-gray-2);
+    display: flex;
+    justify-content: center;
+}
+
+.items-filters a {
+    font-size: 1.5rem;
+    color: white;
+    display: block;
+    padding: 2rem;
+}
+
+.items-filters a:hover, .items-filters a.active-filter {
+    background-color: var(--color-pink);
+}
+
+@media (max-width: 1000px) {
+    .items-filters {
+        flex-direction: column;
+    }
+    .items-filters a {
+        padding: 1rem;
+        text-align: center;
+    }
+}
+
 main {
     padding: 0 1.2rem;
 }
@@ -13,6 +60,9 @@ main {
     flex-basis: 30%;
     padding: 2rem;
     margin-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 @media (max-width: 1000px) {
