--- a/styles/basket.css
+++ b/styles/basket.css
@@ -29,14 +29,20 @@ thead td:last-child {
     height: auto;
 }
 
+.basket-item-count {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .basket-item-count-value {
     display: inline-block;
     font-size: 1.3rem;
 }
 
 .basket-item-count-action {
+    cursor: pointer;
     font-size: 1rem;
-    margin: 0 1rem;
     font-weight: bold;
     background-color: var(--color-pink);
     padding: 1rem;
@@ -97,8 +103,8 @@ thead td:last-child {
         font-size: 1.3rem;
         letter-spacing: 2px;
     }
+
     .basket-item-count-action {
-        margin: 0;
         padding: 1.5rem;
         background-color: rgb(255 66 82);
     }
@@ -113,7 +119,9 @@ thead td:last-child {
     .basket-item-count {
         display: flex;
         justify-content: center;
+        align-items: normal;
     }
+
     .basket-item-count-value {
         background-color: var(--color-pink);
 
