--- a/styles/makeup.css
+++ b/styles/makeup.css
@@ -129,9 +129,54 @@ main {
     border-radius: 1rem;
     filter: opacity(0.7);
     margin: 0 auto;
+    cursor: pointer;
 }
+
 .makeup-item-card-buy-button:hover,.makeup-item-card-buy-button.active {
     filter: none;
     color: white;
     background-color: var(--color-pink);
+}
+
+/*adsalksdlkasdd*/
+
+.basket-item-count {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.basket-item-count-value {
+    display: inline-block;
+    font-size: 1.3rem;
+}
+
+.basket-item-count-action {
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+    background-color: var(--color-pink);
+    padding: 1rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
+    color: white;
+}
+
+.basket-item-count-action:hover {
+    color: white;
+    filter: brightness(0.8) contrast(2);
+}
+
+.basket-item-count-action i {
+    color: inherit;
+}
+
+.makeup-item-card-already-in-basket-controls {
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
