--- a/styles/makeup.css
+++ b/styles/makeup.css
@@ -138,8 +138,6 @@ main {
     background-color: var(--color-pink);
 }
 
-/*adsalksdlkasdd*/
-
 .basket-item-count {
     display: flex;
     justify-content: space-evenly;
@@ -179,4 +177,5 @@ main {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    user-select: none;
 }
