--- a/styles/about.css
+++ b/styles/about.css
@@ -73,9 +73,8 @@ section.about-banner {
     border-radius: 3rem;
 }
 
-@media screen and (max-width: 600px) {
-    .column {
-        flex: 100%;
-        max-width: 100%;
+@media screen and (max-width: 1000px) {
+    .about-main-gallery {
+        display: none;
     }
 }
